test/libsolidity/syntaxTests/parsing/import_empty.sol
import "";
// ----
// ParserError: (0-10): Import path cannot be empty.
